# cs6120

./: .envrc  .gitignore  .gitmodules  Cargo.toml  Makefile
benchmarks/: turnt_from_ssa.toml  turnt_to_ssa.toml
bril-mlir/: CMakeLists.txt
bril-mlir/bril-opt/: CMakeLists.txt  bril-opt.cpp
bril-mlir/include/: CMakeLists.txt
bril-mlir/include/Bril/: BrilDialect.h  BrilDialect.td  BrilOps.h  BrilOps.td  BrilPasses.h  BrilPasses.td  BrilTypes.h  BrilTypes.td  CMakeLists.txt
bril-mlir/lib/Bril/: BrilDialect.cpp  BrilOps.cpp  BrilPasses.cpp  BrilTypes.cpp  CMakeLists.txt
bril-mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
bril-mlir/test/Bril/: bril-opt.mlir  dummy.mlir
src/: analysis.rs  bb.rs  bril.rs  cfg.rs  data_flow.rs  dce.rs  lib.rs  lvn.rs  ssa.rs  util.rs  v2.rs
src/v2/: basic_block.rs  context.rs  control_flow_graph.rs  dominance_tree.rs  error.rs  graph.rs  instruction.rs  linked_list.rs  ssa.rs
test/task1/: ackermann.out  turnt.toml
test/task2-dce/: dce_chain.bril  dce_chain.out  turnt.toml
test/task2-lvn/: arg-overwrite.bril  arg-overwrite.out  arg-overwrite.stdout  arg.bril  arg.out  arg.stdout  brili.toml  commute.bril  commute.out  const-fold.bril  const-fold.out  constant.bril  constant.out  copy-prop.bril  copy-prop.out  easy.bril  easy.out  id.bril  id.out  issue-105.bril  issue-105.out  issue-77.out  not.bril  not.out  overwrite.bril  overwrite.out  ret.bril  ret.out  turnt.toml
test/task3/: const-prop-loop.bril  const-prop-var.bril  const-prop.bril
test/task4-ssa/: argwrite.bril  argwrite.from_ssa  argwrite.to_ssa  brili.toml  from_ssa.toml  from_ssa_brili.toml  if-ssa.bril  if-ssa.from_ssa  if-ssa.to_ssa  if-undef.bril  if-undef.from_ssa  if-undef.to_ssa  if.bril  if.from_ssa  if.stdout  if.to_ssa  is_ssa.toml  loop-ssa.from_ssa  loop-ssa.to_ssa  loop.from_ssa  loop.to_ssa  selfloop.from_ssa  selfloop.to_ssa  to_ssa.toml  to_ssa_brili.toml  undef-loop.from_ssa  undef-loop.to_ssa  while.bril  while.from_ssa  while.to_ssa
