[package]
name = "cs6120"
version = "0.1.0"
authors = ["Nick Terrell <terrelln@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cs6120"

[dependencies]
serde_json = "1.0"
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
ordered-float = { version = "2.0", features = ["serde"] }

[features]
default = ["float", "memory", "ssa", "speculate"]
float = []
memory = []
ssa = []
speculate = []